# ai

./: .codecov.yml  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  _commit_msg.txt  commit-msg.txt  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs-check.yml  issue-triage.yml  labeler.yml  pages.yml  publish.yml  stale.yml
Try/scripts/: parameterOptimizer.js
__tests__/: parameterOptimizer.test.js  test_canary.py  test_canary_unit.py  test_heatmap.py  test_helpers.py  test_policy_linter.py  test_preflight.py  test_runbook.py  test_trust_propagation.py
demos/: sla_demo.py
docs/: index.html  index.md
docs/api/: access_control.md  alert_router.md  alignment.md  anomaly_cluster.md  anomaly_replay.md  anomaly_timeline.md  attack_surface.md  attack_tree.md  audit_trail.md  behavior_profiler.md  boundary_tester.md  canary.md  capacity.md  chaos.md  circuit_breaker.md  comparator.md  compliance.md  consensus.md  contract.md  controller.md  covert_channels.md  (+83 more)
tests/: conftest.py  test_access_control.py  test_alert_router.py  test_alignment.py  test_alignment_tax.py  test_anomaly_replay.py  test_anomaly_timeline.py  test_attack_surface.py  test_attack_tree.py  test_audit_trail.py  test_behavior_profiler.py  test_blast_radius.py  test_boundary_tester.py  test_breach_predictor.py  test_canary.py  test_canary_unit.py  test_capability_catalog.py  test_capability_elicitation.py  test_capability_overhang.py  test_capacity.py  test_chaos.py  test_circuit_breaker.py  test_collusion_detector.py  test_comparator.py  test_comparator_extended.py  test_compliance.py  test_consensus.py  test_containment.py  test_contract.py  test_controller.py  test_coordinated_threats.py  test_correlation_graph.py  test_corrigibility_auditor.py  test_covert_channels.py  test_dashboard.py  test_deception_detector.py  test_dependency_graph.py  test_drift.py  test_emergent.py  test_emergent_coalition.py  (+81 more)
(+193 files in other folders)
